--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,9 @@
+*{
+  margin: 0;
+  padding: 0;
+}
 .header {
-    width: 95%;
+    width: 100vw;
     display: flex;
     justify-content: space-between;
     background-color: black;
@@ -9,7 +13,6 @@
   text-decoration: none;
   padding: 10px;
 }
-
 .cart{
     margin-top: 10px;
     padding: 5px;
