--- a/src/pages/landingPage/landingPage.css
+++ b/src/pages/landingPage/landingPage.css
@@ -48,7 +48,16 @@
 }
 
 .lpDiv3 {
-    background-color: rgb(21, 20, 20);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100vw;
+}
+
+.lpDiv4 {
+
 }
 
 .lpSection1 {
@@ -58,7 +67,6 @@
     align-items: center;
     height: 40vh;
     width: 100%;
-    background-color: rgb(21, 20, 20);
     color: white;
 }
 
@@ -85,16 +93,28 @@
 }
 
 
-.imageSection1 {
-    object-fit: cover;
+.arrowSection1 {
+    width: 5rem;
+    height: 5rem;
+}
+
+.arrowSection1:hover {
+    transition: 500ms;
+    -webkit-transform: translateY(2px);
+    -moz-transform: translateY(2px);
+    -ms-transform: translateY(2px);
+    -o-transform: translateY(2px);
+    transform: translateY(2px);
+
 }
 
 .imageSection2 {
     object-fit: cover;
+    width: 100vw;
 }
 
 .imageSection3 {
-    object-fit: contain;
+    object-fit: cover;
     width: 100vw;
 }
 
@@ -107,13 +127,12 @@
     border-radius: 50px;
     -webkit-box-shadow: 0px 8px 31px 5px rgba(118,0,0,0.42); 
     box-shadow: 0px 8px 31px 5px rgba(118,0,0,0.42);
+    opacity: 80%;
 }
 
 .imageSection4:hover {
     transition: 500ms;
-    -webkit-transform: translateY(-2px);
-    -moz-transform: translateY(-2px);
-    -ms-transform: translateY(-2px);
-    -o-transform: translateY(-2px);
-    transform: translateY(-2px);
+    opacity: 100%;
+    width: 55.5vw;
+    height: 50.5vh;
 }
