--- a/src/pages/landingPage/landingPage.css
+++ b/src/pages/landingPage/landingPage.css
@@ -1,8 +1,9 @@
 * {
     margin: 0;
     padding: 0;
-    background-color: rgb(21, 20, 20);
+    /* background-color: rgb(21, 20, 20); */
 }
+
 
 .logo-section1 {
     width: 5rem;
