--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,9 +1,8 @@
-
+/* 
 
 
 .footer-header {
   background-color: rgba(150, 38, 38, 1);
-  margin-top: 500px;
   padding: 25px;
   display: flex;
   justify-content: space-around;
@@ -107,4 +106,4 @@ footer .footer-main {
   font-family: gothan;
   font-size: 13px;
   padding: 0 30px;
-}
+} */
