--- a/src/pages/landingPage/landingPage.css
+++ b/src/pages/landingPage/landingPage.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     background-color: rgb(21, 20, 20);
+    color: white;
 }
 
 .logo-section1 {
@@ -56,9 +57,9 @@
     width: 100vw;
 }
 
-.lpDiv4 {
+/* .lpDiv4 {
 
-}
+} */
 
 .lpSection1 {
     display: flex;
