--- a/src/pages/Cardapio/Cardapio.css
+++ b/src/pages/Cardapio/Cardapio.css
@@ -1,11 +1,10 @@
-*{
-    margin: 0;
-    padding: 0;
-}
+
 .cardapio {
     width: 100vw;
     display: flex;
-    background-color: rgba(32, 32, 32, 0.98);
+    flex-direction: column;
+    background-image: url('../../assets/cardapio_background.png');
+    background-size: cover;
 }
 
 .productsContainer {
@@ -14,4 +13,6 @@
     gap: 50px;
     flex-wrap: wrap;
     justify-content: space-around;
+
+    
 }
