--- a/src/components/CardComponent/CardComponent.css
+++ b/src/components/CardComponent/CardComponent.css
@@ -5,8 +5,24 @@
     border-radius: 3px;
 }
 .products{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     color: white;
+    box-shadow: 0 4px 8px 0 rgba(232, 222, 222, 0.2);
+    height: 22em;
+    border-radius: 20px;
 }
+
+.products h2 {
+    text-transform: uppercase;
+}
+
+.botao {
+    border-radius: 3px;
+}
+
 .botao.addButton {
     background-color: green;
 }
