--- a/src/pages/Cardapio/Cardapio.css
+++ b/src/pages/Cardapio/Cardapio.css
@@ -1,18 +1,29 @@
 
 .cardapio {
-    width: 100vw;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
+    gap: 4em;
     background-image: url('../../assets/cardapio_background.png');
     background-size: cover;
 }
 
-.productsContainer {
+.cardapioTitle {
     display: flex;
-    width: 80vw;
-    gap: 50px;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
+    color: white;
+    margin-top: 2em;
+}
 
+.productsContainer {
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    gap: 2em;
+    flex-wrap: wrap;
     
 }
+
