--- a/src/pages/landingPage/landingPage.css
+++ b/src/pages/landingPage/landingPage.css
@@ -20,12 +20,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 0;
-    padding: 0;
     background-color: rgb(21, 20, 20);
     color: white;
     height: 100%;
-    width: 100vw;
+    width: 100%;
     font-family: 'Courier New', Courier, monospace;
 }
 
@@ -35,7 +33,7 @@
     justify-content: center;
     align-items: center;
     height: 100%;
-    width: 100vw;
+    width: 100%;
 }
 
 .lpDiv2 {
@@ -44,7 +42,7 @@
     justify-content: center;
     align-items: center;
     height: 100%;
-    width: 100vw;
+    width: 100%;
 }
 
 .lpDiv3 {
@@ -53,12 +51,8 @@
     justify-content: center;
     align-items: center;
     height: 100%;
-    width: 100vw;
+    width: 100%;
 }
-
-/* .lpDiv4 {
-
-} */
 
 .lpSection1 {
     display: flex;
@@ -74,7 +68,7 @@
     display: flex;
     justify-content: center;
     height: 50vh;
-    width: 100vw;
+    width: 100%;
     color: white;
 }
 
@@ -82,7 +76,7 @@
     display: flex;
     justify-content: center;
     height: 85vh;
-    width: 100vw;
+    width: 100%;
     color: white;
 }
 
@@ -110,12 +104,12 @@
 
 .imageSection2 {
     object-fit: cover;
-    width: 100vw;
+    width: 100%;
 }
 
 .imageSection3 {
     object-fit: cover;
-    width: 100vw;
+    width: 100%;
 }
 
 .imageSection4 {
