alteração das cores no header e footer

--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -2,7 +2,7 @@
 
 
 .footer-header {
-  background-color: rgba(150, 38, 38, 1);
+  background-color: #15A014;
   padding: 25px;
   display: flex;
   justify-content: space-around;
