--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -8,6 +8,9 @@
 .subTotal {
     display: flex;
     flex-direction: column;
+    line-height: 50px;
+    border-radius: 5px;
+    padding: 0 10px;
 }
 
 .cartProduct {
