--- a/src/pages/Cardapio/Cardapio.css
+++ b/src/pages/Cardapio/Cardapio.css
@@ -7,6 +7,8 @@
     gap: 4em;
     background-image: url('../../assets/cardapio_background.png');
     background-size: cover;
+    font-family: gothan;
+    font-weight: lighter;
 }
 
 .cardapioTitle {
