--- a/src/pages/landingPage/landingPage.css
+++ b/src/pages/landingPage/landingPage.css
@@ -1,4 +1,6 @@
-
+html {
+    scroll-behavior: smooth;
+}
 
 .logo-section1 {
     width: 5rem;
@@ -54,6 +56,16 @@
     width: 100%;
 }
 
+.lpDiv4 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: rgb(21, 220, 21);
+    margin-top: 2rem;
+    font-size: 0.7rem;
+}
+
 .lpSection1 {
     display: flex;
     flex-direction: column;
@@ -82,6 +94,7 @@
 
 .lpSection4 {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     background-color: rgb(21, 20, 20);
 }
@@ -105,6 +118,7 @@
 .imageSection2 {
     object-fit: cover;
     width: 100%;
+    object-position: 0 70%;
 }
 
 .imageSection3 {
@@ -116,7 +130,7 @@
     object-fit: cover;
     width: 55vw;
     height: 50vh;
-    margin-top: 3rem;
+    margin-top: 2rem;
     margin-bottom: 3rem;
     border-radius: 50px;
     -webkit-box-shadow: 0px 8px 31px 5px rgba(118,0,0,0.42); 
