--- a/src/components/atualizar/Atualizar.css
+++ b/src/components/atualizar/Atualizar.css
@@ -44,7 +44,7 @@
 .btnatt:hover{
     border-color: chartreuse;
     outline: 0;
-    box-shadow: 0 0 0 0.1rem chartreuse
+    box-shadow: 0px 1.8px 2.0px 0.3px chartreuse
 }
 
 .attfinal{
