trabalhando na página de cadápio

--- a/src/components/CardComponent/CardComponent.css
+++ b/src/components/CardComponent/CardComponent.css
@@ -1,68 +1,43 @@
 
-  @font-face {
-    font-family: iron;
-    src: url(./font/iron_brine/Iron&Brine.ttf);
-  }
-  
-
-.botao {
-    display: flex;
-    cursor: pointer;
-    margin-top: 0.5em;
-    border-radius: 3px;
-}
 .products{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     color: white;
-    box-shadow: 0 4px 8px 0 rgba(232, 222, 222, 0.2);
-    height: 22em;
-    border-radius: 20px;
-}
-
-.products:hover {
-    width: 25em;
-    
+    max-width: 250px;
+    flex: 1;
 }
 
 .products h2 {
     text-transform: uppercase;
+    padding: 10px;
 }
 
-.ingredientesHover {
-    display: none;
+.products h3 {
+    padding: 10px;
 }
 
-.products:hover .ingredientesHover {
-    display: block;
-    margin-top: 20px;
+.card-img img{
+    border-radius: 10px;
+    transition: .3s all ease-in-out;
+}
+
+.card-img:hover ~.card-img img {
+    transform: scale(1.2);
+}
+
+
+.ingredientes {
     text-align: center;
-    font-size: 15px;
-    font-family: iron;
-    
+    max-width: 250px;
 }
-
-.products:hover .prodImage {
-    display: inline-block;
-   
-}
-
-.products:hover h2{
-    display: none;
-}
-
-.products:hover h3{
-    display: none;
-}
-
 
 .botao {
+    display: flex;
+    cursor: pointer;
+    margin-top: 0.5em;
     border-radius: 3px;
-}
-
-.botao.addButton {
     background-color: green;
 }
 
