--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -16,11 +16,12 @@ header {
   height: 55px;
   padding: 5px 50px;
   background-color: black;
-  box-shadow: 0px 18px 20px 3px rgba(255,0,0,0.65);
+  box-shadow: 0px 1px 50px 8px #15A014;
   font-weight: 400;
   font-size: 20px;
   font-family: iron;
   width: 100%;
+  position: relative;
 }
 
 header img {
