--- a/src/pages/pedido/pedido.css
+++ b/src/pages/pedido/pedido.css
@@ -2,18 +2,42 @@
     margin: 0;
     padding: 0;
 }
-.pedidoContainer{
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
+.pedido{
+    background: url(../../assets/bg-footer.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: white;
+    font-family: iron;
+    padding-bottom: 100px;
 }
-.cartPedido{
+.btn-pedido{
     display: flex;
-    flex-direction: column;
+    gap: 3%;
+    justify-content:end;
+    cursor: pointer;
+    border-radius: 5px;
+    border: none;
+    color: white;
+    margin-right: 20px;
+    font-family: gothan;
+    font-size: 15px;
+    transition: .3s all ease-in-out;
+}
+.btn-content{
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+    margin-top: 0.5em;
+    border-radius: 5px;
+    background-color: green;
+    border: none;
+    padding: 10px 20px;
+    color: white;
+    font-family: iron;
+    font-size: 15px;
+    transition: .3s all ease-in-out;
 }
 
-p{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
+.list{
+    padding: 50px;
+}
