--- a/src/components/CardComponent/CardComponent.css
+++ b/src/components/CardComponent/CardComponent.css
@@ -9,10 +9,10 @@
     flex: 1;
 }
 
-.products h2 {
+/* .products h2 {
     text-transform: uppercase;
     padding: 10px;
-}
+} */
 
 .products h3 {
     padding: 10px;
@@ -33,6 +33,7 @@
     padding: 5px;
     max-width: 250px;
     transition: .3s all ease-in-out;
+    font-size: 0.6rem;
 }
 
 .ingredientes:hover {
@@ -43,6 +44,7 @@
     display: flex;
     cursor: pointer;
     margin-top: 0.5em;
+    margin-bottom: 0.8rem;
     border-radius: 5px;
     background-color: green;
     border: none;
