--- a/src/components/CardContato/CardContato.css
+++ b/src/components/CardContato/CardContato.css
@@ -26,22 +26,28 @@
 }
 
 .card:hover {
-    margin-top: -0.5rem;
+    -webkit-transform: translateY(-3px);
+    -moz-transform: translateY(-3px);
+    -ms-transform: translateY(-3px);
+    -o-transform: translateY(-3px);
+    transform: translateY(-3px);
 }
 
 .icones {
    display: flex;
    align-items: center;
    justify-content: center;
-   padding: 25px;
-    
+   padding: 25px;  
 }
 
 .icones svg {
     color: green;  
     width: 4em;
     height: 2em;
-    
+}
+
+.icones svg:hover{
+    transform: scale(1.5);
 }
 
 .nome {
