--- a/src/pages/atualizar/Atualizar.css
+++ b/src/pages/atualizar/Atualizar.css
@@ -27,12 +27,14 @@
 
 .quantidade{
     width: 50px;
+    background: inherit;
 }
 
 .buttonDivAtt{
     display: flex;
     flex-direction: row;
-
+    padding: 1em;
+    gap: 1em;
 }
 
 .btnatt{
@@ -59,6 +61,7 @@
     justify-content: center;
     align-items: center;
     margin: 25px 0 0 0;
+    padding: 1em;
 }
 
 .attTitulo{
