--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -11,7 +11,8 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 55px;
+  flex-wrap: wrap;
+  min-height: 55px;
   padding: 5px 50px;
   background-color: black;
   box-shadow: 0px 1px 50px 8px #15A014;
@@ -63,3 +64,16 @@ text-shadow: 0 0 5px #FFF, 0 0 10px #01B213, 0 0 15px #01B213, 0 0 20px #49ff18,
     margin: 0.5em;
   }
   
+
+
+  @media (max-width: 550px) {
+    header {
+      display: flex;
+      flex-direction: column;
+    }
+
+    nav {
+      display: flex;
+      flex-direction: column;
+    }
+  }
