Implementacao do icone de loading na pagina de pedidos e alteração no css - implementando altura minima para não quebrar o footer quando não há pedidos

--- a/src/pages/pedido/pedido.css
+++ b/src/pages/pedido/pedido.css
@@ -6,6 +6,7 @@
     color: white;
     font-family: iron;
     padding-bottom: 100px;
+    min-height: 50vh;
 }
 .btn-pedido{
     display: flex;
@@ -42,3 +43,37 @@
     padding: 50px;
 }
 
+.hidden {
+    display: none;
+}
+
+@keyframes popup {
+    from {
+      transform: translateY(-10px);
+    }
+  
+    to {
+      transform: scaleY(0px);
+    }
+  }
+  
+  @keyframes pulse {
+    0% {
+      box-shadow: 0 0 0 0 #c6e1c6;
+    }
+  
+    100% {
+      box-shadow: 0 0 0 10px;
+    }
+  }
+  
+  .loadingBurger{
+    animation: pulse 1.5s linear infinite;
+    border-radius: 50%;
+  } 
+
+  .popup{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
