--- a/src/components/CardContato/CardContato.css
+++ b/src/components/CardContato/CardContato.css
@@ -7,6 +7,7 @@
 
 .card {
         display: flex;
+        flex-wrap: wrap;
         flex-direction: column;
         justify-content: center;
         margin: 2rem;
@@ -22,7 +23,6 @@
         backdrop-filter: blur(2.8px);
         -webkit-backdrop-filter: blur(2.8px);
         border: 1px solid #15A014; 
-  
 }
 
 .card:hover {
