Atualizando deploy do backend: Remoção do deploy do heroku e atualizando para o deploy do railway

--- a/src/pages/landingPage/landingPage.css
+++ b/src/pages/landingPage/landingPage.css
@@ -101,6 +101,18 @@ html {
     background-color: rgb(21, 20, 20);
 }
 
+.mapouter{
+    position:relative;
+    text-align:right;
+    height:500px;
+    width:600px;
+}
+.gmap_canvas {
+    overflow:hidden;
+    background:none!important;
+    height:500px;
+    width:600px;
+}
 
 .arrowSection1 {
     width: 5rem;
